# RDS-SLAM

./: .gitignore  README.md
MaskRCNN_ROS/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
MaskRCNN_ROS/action/: batch.action  maskrcnn.action  semantic.action
MaskRCNN_ROS/include/MaskRCNN/: LICENSE  download_model.sh  requirements.txt  setup.py
MaskRCNN_ROS/include/MaskRCNN/mrcnn/: config.py  model.py  utils.py  visualize.py
MaskRCNN_ROS/include/MaskRCNN/samples/: demo.py  tum_infer.py
MaskRCNN_ROS/include/MaskRCNN/samples/coco/: coco.py
MaskRCNN_ROS/include/maskrcnn_ros/: maskrcnn_client.h
MaskRCNN_ROS/launch/: action_client.launch  action_server.launch
MaskRCNN_ROS/msg/: objectInfo.msg
MaskRCNN_ROS/params/: param.yaml
MaskRCNN_ROS/script/: action_server.py
MaskRCNN_ROS/src/: client.cpp
SLAM/: .gitignore  CMakeLists.txt  README.md  build_thirdparty.sh  package.xml
SLAM/Examples/: ros_tum_rgbd.cpp
SLAM/config/: ros_tum.yaml
SLAM/config/RGB-D/: kinect2.yaml  realsense.yaml
SLAM/config/Stereo/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml
SLAM/include/: Common.h  Frame.h  FrameDrawer.h  KeyFrame.h  LoopClosing.h  MapPoint.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  Semantic.h  SlamConfig.h  System.h  Tracking.h
SLAM/launch/: tum_maskrcnn_gdb.launch  tum_maskrcnn_walk_static.launch  tum_maskrcnn_walk_xyz.launch  tum_segnet_gdb.launch  tum_segnet_walk_static.launch  tum_segnet_walk_xyz.launch
SLAM/src/: Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Semantic.cpp  SlamConfig.cpp  System.cc  Tracking.cc  Viewer.cc
SegNet_ROS/: .gitignore  CMakeLists.txt  README.md  package.xml
SegNet_ROS/action/: segnet.action
SegNet_ROS/include/: action_server.h  common.h  libsegnet.h  segnet.h
SegNet_ROS/include/segnet_ros/: segnet_client.h
SegNet_ROS/launch/: action_client.launch  action_server.launch
SegNet_ROS/params/: param.yaml
SegNet_ROS/src/: action_client_node.cpp  action_server.cpp  action_server_node.cpp  libsegnet.cpp  segnet.cpp  segnet_service_node.cpp
SegNet_ROS/srv/: segnet.srv
docker/: .env  docker-compose.yml  dockerfile  requirements.txt  ros_entrypoint.sh
